--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
 <h2 id="permissions-requested-by-the-application">Permissions Requested by the Application</h2>
 <p>On Android the following permissions are requested by the WordsSight application:
-
 <table>
     <tr>
         <th>Permission</th>
@@ -29,6 +28,7 @@
     </tr>
 </table>
 <h2 id="changes-to-this-privacy-policy">Changes to This Privacy Policy</h2>
-<p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any
-    changes. I will notify you of any changes by posting the new Privacy Policy on this page.</p>
+<p>This Privacy Policy may be updated from time to time. Thus, you are advised to review this page periodically for any
+    changes.</p>
+
 <p><strong>This policy is effective as of 2022-11-01</strong></p>
