--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1 id="privacy-policy">Privacy Policy</h1>
-<p>WordSight is an Ad Supported application. This service is provided at no cost and is intended for use as is.</p>
+<p>The WordSight application as an Ad Supported application. This SERVICE is provided at no cost and is intended for use
+    as is.</p>
 <h2 id="information-collection-and-use">Information Collection and Use</h2>
 <p>This application does not collect or store personal data.
     The application is available on Google Play Store and Google Play Store collects some personal data. Please see the
@@ -7,27 +8,33 @@
         href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
 <h2 id="permissions-requested-by-the-application">Permissions Requested by the Application</h2>
 <p>On Android the following permissions are requested by the WordsSight application:
-<table>
-    <tr>
-        <th>Permission</th>
-        <th>Why it is required</th>
-    </tr>
-    <tr>
-        <td>INTERNET</td>
-        <td>to fetch the definitions for words.</td>
-    </tr>
-    <tr>
-        <td>CAMERA</td>
-        <td>to detect words.</td>
-    </tr>
-    <tr>
-        <td>STORAGE</td>
-        <td>to backup and restore the database (used to store details of words learnt everyday). Note: Does not store
-            the definitions of the words.</td>
-    </tr>
+
+<table rules="groups">
+    <thead>
+        <tr>
+            <th style="text-align: center">Permission</th>
+            <th style="text-align: center">Why it is required</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="text-align: left">INTERNET</td>
+            <td style="text-align: right">to fetch the definitions for words</td>
+        </tr>
+        <tr>
+            <td style="text-align: left">CAMERA</td>
+            <td style="text-align: right">to detect words</td>
+        </tr>
+        <tr>
+            <td style="text-align: left">STORAGE</td>
+            <td style="text-align: right">to backup and restore the database (used to store details of words learnt
+                everyday). Note: Does not store
+                the definitions of the words</td>
+        </tr>
+    </tbody>
 </table>
+
 <h2 id="changes-to-this-privacy-policy">Changes to This Privacy Policy</h2>
 <p>This Privacy Policy may be updated from time to time. Thus, you are advised to review this page periodically for any
     changes.</p>
-
 <p><strong>This policy is effective as of 2022-11-01</strong></p>
