--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <tbody>
         <tr>
             <td style="text-align: left">INTERNET</td>
-            <td style="text-align: right">to fetch the definitions for words</td>
+            <td style="text-align: center">to fetch the definitions for words</td>
         </tr>
         <tr>
             <td style="text-align: left">CAMERA</td>
-            <td style="text-align: right">to detect words</td>
+            <td style="text-align: center">to detect words</td>
         </tr>
         <tr>
             <td style="text-align: left">STORAGE</td>
-            <td style="text-align: right">to backup and restore the database (used to store details of words learnt
+            <td style="text-align: center">to backup and restore the database (used to store details of words learnt
                 everyday). Note: Does not store
                 the definitions of the words</td>
         </tr>
