--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1 id="privacy-policy">Privacy Policy</h1>
-<p>The WordSight application as an Ad Supported application. This SERVICE is provided at no cost and is intended for use
+<p>The WordSight application as an Ad Supported application. This service is provided at no cost and is intended for use
     as is.</p>
 <h2 id="information-collection-and-use">Information Collection and Use</h2>
 <p>This application does not collect or store personal data.
