--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <p>The WordSight application as an Ad Supported application. This service is provided at no cost and is intended for use
     as is.</p>
 <h2 id="information-collection-and-use">Information Collection and Use</h2>
-<p>This application does not collect or store personal data.
-    The application is available on Google Play Store and Google Play Store collects some personal data. Please see the
+<p>Currently, this application does not collect or store personal data.
+    The application is available on Google Play Store and Google Play Store may collect some personal data. Please see the
     privacy policy for Google Play Services here: <a
         href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></p>
+<p>The application is also available on Apple App Store and AppStore may collect some personal data. Please see the
+    privacy policy for AppStore here: <a
+        href="https://www.apple.com/legal/privacy">https://www.apple.com/legal/privacy</a></p>
 <h2 id="permissions-requested-by-the-application">Permissions Requested by the Application</h2>
-<p>On Android the following permissions are requested by the WordsSight application:
+<p>The following permissions are requested by the WordsSight application:
 
 <table rules="groups">
     <thead>
