Added supporte details

--- a/index.html
+++ b/index.html
@@ -41,3 +41,6 @@
 <p>This Privacy Policy may be updated from time to time. Thus, you are advised to review this page periodically for any
     changes.</p>
 <p><strong>This policy is effective as of 2022-11-01</strong></p>
+
+<h2 id="support">Support</h2>
+<p>Please reach out to us at thewordsight@gmail.com for any support/queries.</p>
